--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,28 @@
-# Системные файлы
-.DS_Store
-Thumbs.db
+# Dependencies
+node_modules/
+package-lock.json
 
-# Редакторы
+# Environment
+.env
+.env.local
+.env.*.local
+
+# IDE
 .idea/
 .vscode/
 *.swp
 *.swo
 
-# Зависимости
-node_modules/
-npm-debug.log
-yarn-debug.log
-yarn-error.log
+# OS
+.DS_Store
+Thumbs.db
 
-# Сборка
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build
 dist/
-build/
-
-# Локальные файлы
-.env
-.env.local
-.env.*.local
-
-# Логи
-*.log 
+build/ 
