--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Telegram Mini App для студии растяжки \"Total Body\", позволяющее пользователям записываться на занятия, просматривать расписание и оставлять отзывы.",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,5 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
